# Bitplanes

./: CMakeLists.txt  ReadMe.md
3rdLibs/circular_buffer/: base.h  circular_buffer.h  details.h  space_optimized.h
include/: API.h
source/: ChannelDataSampler.cc  ChannelDataSampler.h  LBP.cc  LBP.h  MotionModel.cc  MotionModel.h  Parameters.cc  Parameters.h  PyramidTracker.cc  PyramidTracker.h  Timer.cc  Timer.h  Tracker.cc  Tracker.h  Types.cc  Types.h
test/: BoundedBuffer.h  Demo.cc  Demo.h  TestBitplanesTrackerPyramid.cc  TestDemo.cc  TestTracker.cc
